syntax = "proto3";

package via.sep3.viacalendar.gRPC;
option csharp_namespace = "GrpcAPI.Protos";
import "google/protobuf/any.proto";

enum HandlerTypeProto {
  HANDLER_UNKNOWN = 0;
  HANDLER_EVENT = 1;
}

enum ActionTypeProto {
  ACTION_UNKNOWN = 0;
  ACTION_CREATE = 1;
  ACTION_GET = 2;
  ACTION_UPDATE = 3;
  ACTION_DELETE = 4;
  ACTION_LIST = 5;
}
enum StatusTypeProto {
  STATUS_UNKNOWN = 0;
  STATUS_OK = 1;
  STATUS_ERROR = 2;
  STATUS_INVALID_PAYLOAD = 3;
}
message RequestProto {
  HandlerTypeProto handler = 1;
  ActionTypeProto action = 2;
  google.protobuf.Any payload = 3;
}

message ResponseProto {
  StatusTypeProto status = 1;
  google.protobuf.Any payload = 2;
}
message EventProto {
  int32 id =1;
  string name = 2;
}
service CalendarProtoService {
  rpc SendRequest (RequestProto) returns (ResponseProto);
}

message EventProtoList {
  repeated EventProto events = 1;
}